Modified where stats are collected
Now report stats as part of AnnotateCadd rather than filterbcf

--- a/dxapp.json
+++ b/dxapp.json
@@ -56,7 +56,16 @@
         "*.tsv.gz.tbi"
       ],
       "help": "Associated indices for TSV file(s)"
-    }
+    },
+    {
+      "name": "output_per_samples",
+      "label": "Output per sample consequence annotations",
+      "class": "array:file",
+      "optional": false,
+      "patterns": [
+        "*.tsv"
+      ],
+      "help": "Per-sample variants with AF < 1e-3 for QC.",
   ],
   "access": {
     "network": [
